remote_rom: improvements and refactoring
Avoid a runtime warning message since our backend does not provide
such constructor functions yet. If a backend requires them, it should
initiate their execution by itself within the backend init functions.

In coherence with the size_guard idea, the remote_rom packets are are
separated into a simple layer packet and a data packet. While basically
only managing common control informations, the layer packet may carry
any payload. The data packet, instead, manages the transmission of the
actual ROM payload and can be attached to the layer packet. This
simplifies the management of the notification packets UPDATE and SIGNAL
since they do not contain fields like 'offset' or 'payload_size'
anymore.

Now, a single thread manages all incoming RPC calls, signals and (thus)
network packets. This will hopefully make further synchronization
enhancements a lot easier.

Further changes:
* Following data packets are identified as such by their offset instead
  of their packet type field. This simplifies the protocol.
* reduced redundancy in the packet building code
* rewrap lines with >79 columns
* fix compiler warnings
* split backend code
* Remove a few unnecessary include and using directives.
* In order to avoid global variables across modules, 'verbose' is a
  member variable now. Later, its value may be set via constructor.
* The nested Rx class is merged with Backend_base. This way, we avoid
  unnecessary maintenance as long as we don't have a clear design for
  ROM multiplexing which may require the management of multiple IP
  addresses etc.
* The HANDLER template argument is removed since client and server
  inherit from Backend_base anyway. The receive method is virtual now.
* The signals packet_avail and ready_to_ack are directly passed to the
  same signal handler now.
* Remove unnecessarily public/protected visibility from some members.
* Remove and add unnecessary and, due to inclusion order, secretly
  missing include directi

--- a/src/proxy/remote_rom/README
+++ b/src/proxy/remote_rom/README
@@ -1,32 +1,35 @@
-The remote ROM allows providing ROM services over a network or similar communication
-medium and thus implements publisher/subscriber communication in a distributed system.
+The remote ROM allows providing ROM services over a network or similar
+communication medium and thus implements publisher/subscriber communication in
+a distributed system.
 
-The remote_rom server connects to a local ROM service and provides a remote ROM service
-via the specified backend. The remote_rom client connects to a remote ROM service via
-the specified backend and provides a ROM service via local RPC.
+The remote_rom server connects to a local ROM service and provides a remote ROM
+service via the specified backend. The remote_rom client connects to a remote
+ROM service via the specified backend and provides a ROM service via local RPC.
 
 Backends
 --------
 
-The remote_rom can be compiled with one of multiple back ends that use different session
-interfaces or libraries to forward and receive the packets. By exchanging the backend,
-we can also easily change the publication strategy (e.g., notification+polling vs. multicast).
-Furthermore, a back end is responsible for access control and optionally allows the
-specification of a policy for this.
+The remote_rom can be compiled with one of multiple back ends that use
+different session interfaces or libraries to forward and receive the packets.
+By exchanging the backend, we can also easily change the publication strategy
+(e.g., notification+polling vs. multicast). Furthermore, a back end is
+responsible for access control and optionally allows the specification of a
+policy for this.
 
 :'nic_ip':
-  This back end uses a Nic_session to transmit network packets with IPv4 headers.
+	This back end uses a Nic_session to transmit network packets with IPv4
+	headers.
 
 Configuration
 -------------
 
-Both the client and the server evaluate the '<remote_rom>' node of their config.
-The _name_ attribute specifies the ROMs module name. The '<remote_rom>' node may
-further contain a '<default>' node that can be used to populate the ROM with a default
-content.
+Both the client and the server evaluate the '<remote_rom>' node of their
+config.  The _name_ attribute specifies the ROMs module name. The
+'<remote_rom>' node may further contain a '<default>' node that can be used to
+populate the ROM with a default content.
 
 Example
 ~~~~~~~
 
-For an example that illustrates the use of these components, please refer to the
-_run/remote_rom_backend_nic_ip.run_ script.
+For an example that illustrates the use of these components, please refer to
+the _run/remote_rom_backend_nic_ip.run_ script.
